--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
-<!Docytpe html>
+<!Doctype html>
  <html>
   
-  <heade>
-   <link href="styles.css" rel="stylesheet" type="text/css"/>
+  <head>
+   <link href="styles (1).css" rel="stylesheet" type="text/css"/>
    <title>Mayo Catalog </title>
   </head> 
 
   <body>
-
+<div id="content">
   <div class="card">
     <img src="Rectangle 4.png" class="image"/>
     <p class="product-name">APPLE A1419 iMac 27" Retina 5k Monoblock (MNED2UA/A)</p>
     <p class="product-code">Product code: 195434</P>
     <div class="container">
-    <img class="stars" src="star.png" "star.png"/>
-    <img class="stars" src="star.png" "star(1).png"/>
-    <img class="stars" src="star.png" "star(2).png"/>
-    <img class="stars" src="star.png" "star(3).png"/>
+    <img class="stars" src="star.png"/>
+    <img class="stars" src="star.png"/>
+    <img class="stars" src="star.png"/>
+    <img class="stars" src="star.png"/>
+    <p class="review">Reviews: 5</p>
+    </div>
+    <div class="container2">
+      <p class="price-text">Price:</p>
+      <p class="price">$2,199</p>
+    </div>
+    <div class="button">
+    <button class="mybutton">BUY</button>
+    </div>
+  </div>
+ 
+  <div class="card">
+    <img src="Rectangle 4.png" class="image"/>
+    <p class="product-name">APPLE A1419 iMac 27" Retina 5k Monoblock (MNED2UA/A)</p>
+    <p class="product-code">Product code: 195434</P>
+    <div class="container">
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
     <p class="review">Reviews: 5</p>
     </div>
     <div class="container2">
@@ -28,6 +48,47 @@
     </div>
   </div>
 
+  <div class="card">
+    <img src="Rectangle 4.png" class="image"/>
+    <p class="product-name">APPLE A1419 iMac 27" Retina 5k Monoblock (MNED2UA/A)</p>
+    <p class="product-code">Product code: 195434</P>
+    <div class="container">
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
+    <p class="review">Reviews: 5</p>
+    </div>
+    <div class="container2">
+      <p class="price-text">Price:</p>
+      <p class="price">$2,199</p>
+    </div>
+    <div class="button">
+    <button class="mybutton">BUY</button>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="Rectangle 4.png" class="image"/>
+    <p class="product-name">APPLE A1419 iMac 27" Retina 5k Monoblock (MNED2UA/A)</p>
+    <p class="product-code">Product code: 195434</P>
+    <div class="container">
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
+    <img class="stars" src="star.png" />
+    <p class="review">Reviews: 5</p>
+    </div>
+    <div class="container2">
+      <p class="price-text">Price:</p>
+      <p class="price">$2,199</p>
+    </div>
+    <div class="button">
+    <button class="mybutton">BUY</button>
+    </div>
+  </div>
+   
+</div>
   </body>
 
-</html?
+</html>
